Fixing alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -379,7 +379,7 @@ body.dark {
 }
 
 .post-nav .trending-post {
-    margin-left: 25px;
+    margin-left: 10px;
 }
 
 .post-nav a i {
